# lyra-monitor

./: .dockerignore  .env.example  .gitignore  Cargo.toml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/packaging/: install.sh  lyra-agent.service  uninstall.sh
agent/src/: dbus.rs  discovery.rs  grpc.rs  main.rs  metrics.rs  metrics_history.rs  pam_auth.rs  pty.rs  systemd.rs
backend/: Cargo.toml  Dockerfile
backend/packaging/: install.sh  lyra-backend.service  uninstall.sh
backend/src/: discovery.rs  grpc_client.rs  main.rs  static_files.rs  ws_bridge.rs
backend/src/alerts/: evaluator.rs  mod.rs  model.rs  store.rs  webhook.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: MetricChart.module.css  MetricChart.tsx  MetricTile.module.css  MetricTile.test.tsx  MetricTile.tsx  StatusDot.module.css  StatusDot.test.tsx  StatusDot.tsx  ThemeToggle.module.css  ThemeToggle.tsx
frontend/src/components/alerts/: AlertRuleSection.module.css  AlertRuleSection.tsx  WebhookSection.module.css  WebhookSection.tsx
frontend/src/components/layout/: AgentLayout.module.css  AgentLayout.tsx  AppShell.module.css  AppShell.tsx  Sidebar.module.css  Sidebar.tsx
frontend/src/hooks/: useAgentMetrics.ts  useAgentServices.ts  useAgents.ts  useAlertRules.ts  useInterval.test.ts  useMetricsHistory.ts  useTheme.ts  useWebhooks.ts
frontend/src/lib/: alertConditions.test.ts  alertConditions.ts  format.test.ts  format.ts
frontend/src/pages/: AgentMetricsPage.module.css  AgentMetricsPage.tsx  AgentPage.module.css  AgentPage.tsx  AgentServicesPage.module.css  AgentServicesPage.tsx  AgentTerminalPage.module.css  AgentTerminalPage.tsx  AlertsPage.module.css  AlertsPage.tsx  DashboardPage.module.css  DashboardPage.tsx  NotFoundPage.module.css  NotFoundPage.tsx  TerminalPage.module.css  TerminalPage.tsx
frontend/src/styles/: global.css  tokens.css
proto/: agent.proto
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
(+4 files in other folders)
