[package]
name = "agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lyra-agent"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

mdns-sd = "0.11"
portable-pty = "0.8"
zbus = { version = "4", default-features = false, features = ["tokio"] }
pam = { version = "0.8", features = ["client"] }
