[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lyra-backend"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
mdns-sd = "0.11"
include_dir = { version = "0.7", optional = true }
mime_guess = { version = "2", optional = true }

[features]
default = ["embedded-ui"]
embedded-ui = ["dep:include_dir", "dep:mime_guess"]
